[package]
name = "vault-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
serde = "1.0.171"
solana-account-decoder = "1.16.3"
solana-client = "1.16.3"
solana-program = "1.16.3"
solana-sdk = "1.16.3"
spl-associated-token-account = "2.0.0"
spl-token = "4.0.0"
tokio = "1.14.1"
url = { version = "2.4.0", features = ["serde"] }
